src/objects/Inventory_Limits__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Limits</relationshipLabel>
        <relationshipName>Inventory_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_to_Order__c</fullName>
        <description>Defaults to the RIO Limit minus the Inventory Level</description>
        <formula>RIO_Limit__c -  Inventory_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available to Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Level__c</fullName>
        <label>Inventory Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Name_Hyperlink__c</fullName>
        <description>Defaults to either the First Name + Last Name fields from the User table or the link to the Account, depending on if the User or Account field is populated, respectively. Used for displaying in the &quot;All Inventory Limits&quot; list view.</description>
        <formula>IF(ISBLANK( User__c) , HYPERLINK(&quot;https://sjm--qa.cs17.my.salesforce.com/&quot; &amp; Account__r.Id , Account__r.Name , &apos;_self&apos;) , User__r.FirstName &amp;&apos; &apos;&amp; User__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIO_Limit__c</fullName>
        <label>RIO Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RIO_PH1_Description__c</fullName>
        <label>RIO PH1 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RIO_PH1__c</fullName>
        <label>RIO PH1 #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Defaults to either the Region field from the User table or the USD AF Region field from the Account table, depending on if the User or Account field is populated, respectively</description>
        <formula>IF(ISBLANK( User__c ) , Account__r.USD_AF_Region__c ,User__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inventory_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Limits</label>
    <listViews>
        <fullName>All_Inventory_Limits</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Name_Hyperlink__c</columns>
        <columns>RIO_Limit__c</columns>
        <columns>Inventory_Level__c</columns>
        <columns>Available_to_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Inventory Limits</label>
    </listViews>
    <nameField>
        <label>RIO PH1 Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>